# task-app

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_initial.rs
backend/src/: lib.rs  main.rs
backend/src/entities/: label.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  social_profile.rs  task.rs  task_group.rs  user.rs  workspace.rs
backend/src/routes/: lib.rs  mod.rs
backend/src/routes/auth/: callback.rs  lib.rs  mod.rs  sign_in.rs  sign_out.rs
backend/src/routes/label/: delete.rs  insert.rs  lib.rs  mod.rs  update.rs
backend/src/routes/task/: insert.rs
backend/src/routes/task_group/: delete.rs  insert.rs  mod.rs  update.rs
backend/src/routes/user/: get.rs
backend/src/routes/workspace/: delete.rs  insert.rs  lib.rs  mod.rs  select_all.rs  select_one.rs  update.rs
frontend/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: Button.vue
frontend/src/layouts/: GlobalLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/utils/: api.ts
frontend/src/views/: DashboardView.vue  SignInView.vue
