[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
dotenvy = "0.15.6"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.10.3", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"] }
