[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
dotenvy = "0.15.6"
hex = "0.4.3"
hmac-sha256 = "1.1.5"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.10.3", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls", "postgres-array"] }
serde_json = "1.0.88"
urlencoding = "2.1.2"
